Added dynamic queryDslBuilder, fixed quarkus app, build quarkus-service, build react-webapp